--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <center>
           <br>
   <button class="btn btn-info" onclick="start()">Start</button>
-  <h3 id="noise">I can hear </h2>
-  <h4 id="accuracy">Accuracy- </h3>
+  <h3 class="h" id="noise">I can hear </h2>
+  <h4 class="h" id="accuracy">Accuracy- </h3>
   <br>
+  <img id="hearing" src="hearing.png">
         </center>
       </div>
       <div class="copyright">
